--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<h1><i>top 10 webseries on</i></h1>
 	<h2><i>NETFLIX</i></h2>
 	<img width="100%" src=netflix.jpg>
+	<a href="netflix.html">NETFLIX</a>
 	<h2><i>PRIME VIDEO</i></h2>
 	<img width="100%" src=prime.png>
 	<h2><i>DISNEY+HOTSTAR</i></h2>
