--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 	<a href="netflix.html">NETFLIX</a>
 	<h2><i>PRIME VIDEO</i></h2>
 	<img width="100%" src=prime.png>
+	<a href="prime.html">PRIME VIDEO</a>
 	<h2><i>DISNEY+HOTSTAR</i></h2>
 	<img width="100%" src=hotstar.webp>
+	<a href="disney.html">DISNEY+HOTSTAR</a>
 	</body>
 </html>
