--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	</head>
 	<body>
 	<h1><i>top 10 webseries on</i></h1>
-	<h2><i>NETFLIX</i></h2>
+	<h2><i>NETFLIX</i></h2><br/>
 	<img width="100%" src=netflix.jpg>
 	<a href="netflix.html">NETFLIX</a>
 	<h2><i>PRIME VIDEO</i></h2>
