--- a/netflix.html
+++ b/netflix.html
@@ -13,7 +13,7 @@
         8.<a href="thefall.html">The Fall</a>
         9.<a href="afterlife.html">After Life</a>
         10.<a href="ozark.html">Ozark</a>
-        11.<a href="opepiece.html">One Piece</a>
+        11.<a href="onepiece.html">One Piece</a>
         click <a href="index.html">here</a>to go home
     </body>
 </html>
