--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <htmL>
 	<head>
-	<title>	TOP WEBSERIES </title>
+	<title>	TOP WEBSERIES</title>
 	</head>
 	<body>
 	<h1><i>top 10 webseries on</i></h1>
 	<h2><i>NETFLIX</i></h2><br/>
 	<img width="100%" src=netflix.jpg>
-	<a href="netflix.html">NETFLIX</a>
+	<a href="netflix.jpg">NETFLIX</a>
 	<h2><i>PRIME VIDEO</i></h2>
 	<img width="100%" src=prime.png>
-	<a href="prime.html">PRIME VIDEO</a>
+	<a href="prime.png">PRIME VIDEO</a>
 	<h2><i>DISNEY+HOTSTAR</i></h2>
 	<img width="100%" src=hotstar.webp>
-	<a href="disney.html">DISNEY+HOTSTAR</a>
+	<a href="disney.webp">DISNEY+HOTSTAR</a>
 	</body>
 </html>
