--- a/man.html
+++ b/man.html
@@ -3,6 +3,15 @@
         <title>The Man In The High Castle</title>
     </head>
     <body>
+        <style>
+			html{
+				font-size: 22px;
+			}
+			body{
+    background-color: #333;
+    color: whitesmoke;
+}
+		</style>
         <h1><i>The Man In The High Castle</i></h1>
         <img width="100%" src="8.jpg">
         <a href="prime.html">go back</a>
