--- a/strangerthings.html
+++ b/strangerthings.html
@@ -3,6 +3,15 @@
         <title>Stranger Things</title>
     </head>
     <body>
+        <style>
+			html{
+				font-size: 22px;
+			}
+			body{
+    background-color: #333;
+    color: whitesmoke;
+}
+		</style>
         <h1><i>Stranger Things</i></h1>
         <img width="100%" src="4strangerthings.jpg">
         <a href="netflix.html">go back</a>
