--- a/afterlife.html
+++ b/afterlife.html
@@ -3,6 +3,15 @@
         <title>After Life</title>
     </head>
     <body>
+        <style>
+			html{
+				font-size: 22px;
+			}
+			body{
+    background-color: #333;
+    color: whitesmoke;
+}
+		</style>
         <h1><i>After Life</i></h1>
         <img width="100%" src="9afterlife.jpg">
         <a href="netflix.html">go back</a>
