--- a/beatles.html
+++ b/beatles.html
@@ -3,6 +3,15 @@
         <title>The Beatles:Get Back</title>
     </head>
     <body>
+        <style>
+			html{
+				font-size: 22px;
+			}
+			body{
+    background-color: #333;
+    color: whitesmoke;
+}
+		</style>
         <h1><i>The Beatles:Get Back</i></h1>
         <img width="100%" src="02.jpg">
         <a href="disney.html">go back</a>
