--- a/cosmos.html
+++ b/cosmos.html
@@ -3,6 +3,15 @@
         <title>Cosmos : Possible Worlds</title>
     </head>
     <body>
+        <style>
+			html{
+				font-size: 22px;
+			}
+			body{
+    background-color: #333;
+    color: whitesmoke;
+}
+		</style>
         <h1><i>Cosmos:Possible Worlds</i></h1>
         <img width="100%" src="01.jpg">
         <a href="disney.html">go back</a>
