--- a/dark.html
+++ b/dark.html
@@ -3,6 +3,15 @@
         <title>Dark</title>
     </head>
     <body>
+        <style>
+			html{
+				font-size: 22px;
+			}
+			body{
+    background-color: #333;
+    color: whitesmoke;
+}
+		</style>
         <h1><i>Dark</i></h1>
         <img width="100%" src="6dark.webp">
         <a href="netflix.html">go back</a>
