--- a/disney.html
+++ b/disney.html
@@ -3,6 +3,15 @@
         <title>DISNEY+HOTSTAR</title>
     </head>
     <body>
+        <style>
+			html{
+				font-size: 22px;
+			}
+			body{
+    background-color: #333;
+    color: whitesmoke;
+}
+		</style>
         1.<a href="cosmos.html">Cosmos:Possible Worlds </a>
         <br>
         2.<a href="beatles.html">The Beatles: Get Back</a>
