--- a/dop.html
+++ b/dop.html
@@ -3,6 +3,15 @@
         <title>Dopesick</title>
     </head>
     <body>
+        <style>
+			html{
+				font-size: 22px;
+			}
+			body{
+    background-color: #333;
+    color: whitesmoke;
+}
+		</style>
         <h1><i>Dopesick</i></h1>
         <img width="100%" src="06.jpg">
         <a href="disney.html">go back</a>
