--- a/family.html
+++ b/family.html
@@ -3,6 +3,15 @@
         <title>Mordern Family</title>
     </head>
     <body>
+        <style>
+			html{
+				font-size: 22px;
+			}
+			body{
+    background-color: #333;
+    color: whitesmoke;
+}
+		</style>
         <h1><i>Modern Family</i></h1>
         <img width="100%" src="07.jepg">
         <a href="disney.html">go back</a>
