--- a/jungle.html
+++ b/jungle.html
@@ -3,6 +3,15 @@
         <title>Mozart In The Jungle</title>
     </head>
     <body>
+        <style>
+			html{
+				font-size: 22px;
+			}
+			body{
+    background-color: #333;
+    color: whitesmoke;
+}
+		</style>
         <h1><i>Mozart In The Jungle</i></h1>
         <img width="100%" src="10.jpeg">
         <a href="prime.html">go back</a>
