--- a/moneyhiest.html
+++ b/moneyhiest.html
@@ -3,6 +3,15 @@
         <title>Money Hiest</title>
     </head>
     <body>
+        <style>
+			html{
+				font-size: 22px;
+			}
+			body{
+    background-color: #333;
+    color: whitesmoke;
+}
+		</style>
         <h1><i>Money Hiest</i></h1>
         <img width="100%" src="1moneyhiest.jpg">
         <a href="netflix.html">go back</a>
