--- a/mrbean.html
+++ b/mrbean.html
@@ -3,6 +3,15 @@
         <title>Mr.Bean</title>
     </head>
     <body>
+        <style>
+			html{
+				font-size: 22px;
+			}
+			body{
+    background-color: #333;
+    color: whitesmoke;
+}
+		</style>
         <h1><i>Mr.Bean</i></h1>
         <img width="100%" src="4mrbean.png">
         <a href="prime.html">go back</a>
