--- a/netflix.html
+++ b/netflix.html
@@ -3,6 +3,15 @@
         <title>NETFLIX</title>
     </head>
     <body>
+        <style>
+			html{
+				font-size: 22px;
+			}
+			body{
+    background-color: #333;
+    color: whitesmoke;
+}
+		</style>
         1.<a href="moneyhiest.html">Money Hiest</a>
         <br>
         2.<a href="narcos.html">Narcos</a>
