--- a/poi.html
+++ b/poi.html
@@ -3,6 +3,15 @@
         <title>Person of Intrest</title>
     </head>
     <body>
+        <style>
+			html{
+				font-size: 22px;
+			}
+			body{
+    background-color: #333;
+    color: whitesmoke;
+}
+		</style>
         <h1><i>Person Of Intrest</i></h1>
         <img width="100%" src="6.jpg">
         <a href="prime.html">go back</a>
