--- a/prime.html
+++ b/prime.html
@@ -3,6 +3,15 @@
         <title>PRIME VIDEO</title>
     </head>
     <body>
+        <style>
+			html{
+				font-size: 22px;
+			}
+			body{
+    background-color: #333;
+    color: whitesmoke;
+}
+		</style>
         1.<a href="suits.html">Suits</a>
         <br>
         2.<a href="elementary.html">Elementary</a>
