--- a/suits.html
+++ b/suits.html
@@ -3,6 +3,15 @@
         <title>Suits</title>
     </head>
     <body>
+        <style>
+			html{
+				font-size: 22px;
+			}
+			body{
+    background-color: #333;
+    color: whitesmoke;
+}
+		</style>
         <h1><i>Suits</i></h1>
         <img width="100%" src="1suits.jpg">
         <a href="prime.html">go back</a>
