--- a/sunny.html
+++ b/sunny.html
@@ -3,6 +3,15 @@
         <title>It's Always Sunny In Philadelphia</title>
     </head>
     <body>
+        <style>
+			html{
+				font-size: 22px;
+			}
+			body{
+    background-color: #333;
+    color: whitesmoke;
+}
+		</style>
         <h1><i>It's Always Sunny In Philadelphia</i></h1>
         <img width="100%" src="03.jpg">
         <a href="disney.html">go back</a>
