--- a/the.html
+++ b/the.html
@@ -3,6 +3,15 @@
         <title>The Exorcist</title>
     </head>
     <body>
+        <style>
+			html{
+				font-size: 22px;
+			}
+			body{
+    background-color: #333;
+    color: whitesmoke;
+}
+		</style>
         <h1><i>The Exorcist</i></h1>
         <img width="100%" src="9.jpg">
         <a href="prime.html">go back</a>
