--- a/thefall.html
+++ b/thefall.html
@@ -3,6 +3,15 @@
         <title>The Fall</title>
     </head>
     <body>
+        <style>
+			html{
+				font-size: 22px;
+			}
+			body{
+    background-color: #333;
+    color: whitesmoke;
+}
+		</style>
         <h1><i>The Fall</i></h1>
         <img width="100%" src="8thefall.jpg">
         <a href="netflix.html">go back</a>
