--- a/theman.html
+++ b/theman.html
@@ -3,6 +3,15 @@
         <title>The Mandalorian</title>
     </head>
     <body>
+        <style>
+			html{
+				font-size: 22px;
+			}
+			body{
+    background-color: #333;
+    color: whitesmoke;
+}
+		</style>
         <h1><i>The Mandalorian</i></h1>
         <img width="100%" src="04.jpeg">
         <a href="disney.html">go back</a>
