--- a/this.html
+++ b/this.html
@@ -3,6 +3,15 @@
         <title>This Is Us</title>
     </head>
     <body>
+        <style>
+			html{
+				font-size: 22px;
+			}
+			body{
+    background-color: #333;
+    color: whitesmoke;
+}
+		</style>
         <h1><i>This Is Us</i></h1>
         <img width="100%" src="7.jpeg">
         <a href="prime.html">go back</a>
