--- a/topboy.html
+++ b/topboy.html
@@ -3,6 +3,15 @@
         <title>Top Boy</title>
     </head>
     <body>
+        <style>
+			html{
+				font-size: 22px;
+			}
+			body{
+    background-color: #333;
+    color: whitesmoke;
+}
+		</style>
         <h1><i>Top Boy</i></h1>
         <img width="100%" src="3topboy.jpg">
         <p></p>
