--- a/tmmm.html
+++ b/tmmm.html
@@ -3,6 +3,15 @@
         <title>The Marvelous Mrs.Maisel</title>
     </head>
     <body>
+        <style>
+			html{
+				font-size: 22px;
+			}
+			body{
+    background-color: #333;
+    color: whitesmoke;
+}
+		</style>
         <h1><i>The Marvelous Mrs.Maisel</i></h1>
         <img width="100%" src="3.jpg">
         <a href="prime.html">go back</a>
