--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 				font-size: 22px;
 			}
 			body{
-    background-color: #333;
+    background-color: #55c4e2;
     color: whitesmoke;
 }
 		</style>
