--- a/family.html
+++ b/family.html
@@ -13,7 +13,7 @@
 }
 		</style>
         <h1><i>Modern Family</i></h1>
-        <img width="100%" src="07.jepg">
+        <img width="100%" src="07.jpeg">
         <a href="disney.html">go back</a>
     </body>
 </html>
